[package]
name = "fixed-hashmap"
version = "0.1.0"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
edition = "2018"
repository = "https://github.com/Veykril/fixed-hashmap"
homepage = "https://github.com/Veykril/fixed-hashmap"
license = "MIT OR Apache-2.0"

[dependencies]

[dev-dependencies]
nohash-hasher = "0.2"
